Atualização do código

--- a/estilos/mobile.css
+++ b/estilos/mobile.css
@@ -50,7 +50,7 @@ button {
     border: none;
     border-radius: 10px;
     color: white;
-    font-size: large;
+    font-size: 15px;
     cursor: pointer;
 }
 
